--- a/src/App.scss
+++ b/src/App.scss
@@ -67,8 +67,8 @@ $button-padding: $spacing-xs $spacing-s;
 $alert-border-radius: 8px;
 $alert-gap: $spacing-m;
 $alert-padding-right: $spacing-xl + $spacing-m; // 56px
-$alert-inner-padding: $spacing-l $alert-padding-right $spacing-l 0;
-$alert-thick-border: 12px;
+$alert-inner-padding: $spacing-l $alert-padding-right $spacing-l $spacing-m;
+$alert-thick-border: 7px; // recommend 8px (Figma says 12px), 1px offset
 
 $dismiss-button-border-radius: 6px; // from Figma minimal icon button
 $dismiss-button-size: 20px;
@@ -112,8 +112,15 @@ $transition: all 0.15s ease-in-out;
 
     .wrapper {
       display: grid;
-      gap: $spacing-xl;
-      grid-template-columns: 1fr 2fr;
+
+      &.shared {
+        gap: $spacing-xl;
+        grid-template-columns: 1fr 2fr;
+      }
+      
+      &.new {
+        grid-template-columns: 1fr;
+      }
     }
   }
 }
@@ -216,7 +223,6 @@ $transition: all 0.15s ease-in-out;
   flex-direction: row;
   gap: $spacing-m;
   overflow: hidden;
-  padding-left: $spacing-l;
   position: relative;
 
   @each $color, $value in $colors {
@@ -230,22 +236,65 @@ $transition: all 0.15s ease-in-out;
   }
 
   @each $color, $value in $colors--high-contrast {
-    &.border.#{$color} {
-      border: 1px solid $value;
-    }
+    &.#{$color} {
+      
+      // simple border matching border-radius value
+      &.border {
+        border: 1px solid $value;
+      }
 
-    &.#{$color} .thick-border {
-      background-color: $value;
-      width: $alert-thick-border;
-    }
-  }
+      &.border-left {
+        border-left: 8px solid $value;
+        // border-left-width: 8px;
+      }
 
-  &.border-left {
-    padding-left: 0;
+      // borders thicker than border-radius
+      // &.border {
+      //   border: 1px solid $value;
+      // }
+      // 
+      // &.border-left::before {
+      //   content: "";
+      //   background-color: $value;
+      //   position: absolute;
+      //   top: -1px;
+      //   bottom: -1px;
+      //   left: 0;
+      //   width: $alert-thick-border;
+      // }
+    }
   }
 
   &.bg-none {
     background-color: $bg--base !important;
+  }
+
+  .txt {
+    &-default {
+      .Alert--header h3 {
+        font-size: 20px;
+        line-height: 120%;
+      }
+
+      .Alert--body p {
+        font-size: 16px;
+        line-height: 150%;
+        margin-bottom: 0;
+      }
+    }
+
+    &-small {
+      .Alert--header h3 {
+        font-size: 18px;
+        line-height: 120%;
+      }
+
+      .Alert--body p {
+        font-size: 15px;
+        line-height: 150%;
+        margin-bottom: 0;
+      }
+    }
   }
 
   .Alert--content {
@@ -289,16 +338,6 @@ $transition: all 0.15s ease-in-out;
         fill: $value !important;
       }
     }
-  }
-
-  .Alert--header h3 {
-    font-size: 17.38px; // exact size from Figma component
-    line-height: 125%;
-  }
-
-  .Alert--body p {
-    line-height: 150%;
-    margin-bottom: 0;
   }
   
   .button-dismiss {
@@ -350,9 +389,17 @@ $transition: all 0.15s ease-in-out;
 }
 
 @media (max-width: 1100px) {
-  .section.setup .section--main {
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
+  .section.setup .subsection .wrapper {
+    &.shared {
+      gap: $spacing-l;
+      grid-template-columns: 1fr;
+      grid-template-rows: auto;
+
+      .subwrapper {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+      }
+    }
   }
 }
 
@@ -372,11 +419,14 @@ $transition: all 0.15s ease-in-out;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
   }
+
+  .section.setup .subsection .wrapper.new {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 @media (max-width: 750px) {
   .section.setup .subsection .wrapper {
-    gap: $spacing-l;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
   }
@@ -388,6 +438,20 @@ $transition: all 0.15s ease-in-out;
 
     form {
       width: 100%;
+    }
+  }
+}
+
+@media (max-width: 450px) {
+  .section.setup .subsection .wrapper {
+    &.shared {
+      .subwrapper {
+        grid-template-columns: 1fr;
+      }
+    }
+
+    &.new {
+      grid-template-columns: 1fr;
     }
   }
 }
