Clean up CSS, wrap button label in container query

--- a/src/App.scss
+++ b/src/App.scss
@@ -81,7 +81,7 @@ $font-smaller: 0.9rem;
 .App {
   margin: $spacing-xl auto;
   max-width: 2362px;
-  min-width: fit-content;
+  min-width: 900px;
   overflow: scroll;
 }
 
@@ -156,7 +156,7 @@ $font-smaller: 0.9rem;
     flex-direction: row;
 
     form {
-      width: 50%;
+      width: 100%;
     }
   }
 }
@@ -224,20 +224,15 @@ $font-smaller: 0.9rem;
   }
 
   .example {
-
     div {
       transition: 1s all ease-in-out;
     }
 
-    .border, .border-left {
-      transition: 0.3s all ease-in-out;
-    }
-
-    h3, p {
-      transition: 0.3s all ease-in-out;
-    }
-
-    .Alert--icon svg path {
+    h3,
+    p,
+    svg path,
+    .border,
+    .border-left {
       transition: 0.3s all ease-in-out;
     }
 
@@ -349,20 +344,6 @@ $font-smaller: 0.9rem;
     display: flex;
     flex-direction: row;
     gap: $spacing-m;
-
-    .text-lockup {
-      flex-grow: 1;
-    }
-  }
-
-  .Alert--actions {
-    align-items: center;
-    display: flex;
-    gap: $spacing-s;
-    flex-direction: row;
-    flex-grow: 0;
-    flex-wrap: wrap;
-    min-width: fit-content;
   }
 
   .Alert--icon {
@@ -411,82 +392,14 @@ $font-smaller: 0.9rem;
     }
   
     .Alert--actions {
-      padding-left: $spacing-m + $spacing-l;
+      padding-left: $spacing-m + $spacing-l; // 40px
+
+      .ux-button-text {
+        text-wrap: wrap; // wrap button label text
+      }
     }
   }
 }
-
-/*********************
- *** MEDIA QUERIES ***
- ********************/
-
-// @media (max-width: 1100px) {
-//   .section.setup .subsection .wrapper {
-//     &.shared {
-//       gap: $spacing-l;
-//       grid-template-columns: 1fr;
-//       grid-template-rows: auto;
-
-//       .subwrapper {
-//         display: grid;
-//         grid-template-columns: 1fr 1fr;
-//       }
-//     }
-//   }
-// }
-
-// @media (max-width: 950px) {
-//   .App {
-//     margin: $spacing-l auto;
-//     min-width: fit-content;
-//   }
-
-//   .section {
-//     margin: 0 $spacing-l;
-//     padding: $spacing-l;
-//   }
-
-//   .section.setup .section--main {
-//     gap: $spacing-l;
-//     grid-template-columns: 1fr;
-//     grid-template-rows: auto;
-//   }
-
-//   .section.setup .subsection .wrapper.new {
-//     grid-template-columns: repeat(2, 1fr);
-//   }
-// }
-
-// @media (max-width: 750px) {
-//   .section.setup .subsection .wrapper {
-//     grid-template-columns: 1fr;
-//     grid-template-rows: auto;
-//   }
-// }
-
-// @media (max-width: 550px) {
-//   .section.setup .cta-block {
-//     flex-direction: column;
-
-//     form {
-//       width: 100%;
-//     }
-//   }
-// }
-
-// @media (max-width: 450px) {
-//   .section.setup .subsection .wrapper {
-//     &.shared {
-//       .subwrapper {
-//         grid-template-columns: 1fr;
-//       }
-//     }
-
-//     &.new {
-//       grid-template-columns: 1fr;
-//     }
-//   }
-// }
 
 /*********************
  *** GENERIC ETC. ****
@@ -516,20 +429,8 @@ label {
   text-transform: lowercase;
  }
 
-.mt-s {
-  margin-top: $spacing-s;
-}
-
-.mt-m {
-  margin-top: $spacing-m;
-}
-
 .mb-s {
   margin-bottom: $spacing-s;
-}
-
-.mb-m {
-  margin-bottom: $spacing-m;
 }
 
 .text-passive {
