--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,8 @@ textarea {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
 }
+
+body,
+#root {
+  height: 100vh;
+}
