Update width setting

--- a/src/App.scss
+++ b/src/App.scss
@@ -107,6 +107,10 @@ $font-smaller: 0.9rem;
     margin-left: $spacing-m;
   }
 
+  .ml-s {
+    margin-left: $spacing-s;
+  }
+
   .mt-s {
     margin-top: $spacing-s;
   }
