--- a/src/App.scss
+++ b/src/App.scss
@@ -172,12 +172,11 @@ $font-smaller: 0.9rem;
       flex-direction: column;
 
       .Alert--header h3 {
-        font-size: 18px;
+        font-weight: 700;
         line-height: 120%;
       }
 
       .Alert--body p {
-        font-size: 15px;
         line-height: 150%;
         margin-bottom: 0;
       }
