Prevent text and button from breaking onto new line too soon

--- a/src/App.scss
+++ b/src/App.scss
@@ -183,7 +183,7 @@ $font-smaller: 0.9rem;
 
     .Alert--text {
       display: flex;
-      flex: 1 1 auto;
+      flex: 1 1 70%;
       flex-direction: column;
       gap: $spacing-s;
 
