Replace full-stip with a zero width space

--- a/src/App.scss
+++ b/src/App.scss
@@ -169,7 +169,7 @@ $font-smaller: 0.9rem;
 
     &:after,
     &:before {
-      content: ".";
+      content: "​";
       visibility: hidden;
     }
   }
