Reduce gap between icon and text lockup

--- a/src/App.scss
+++ b/src/App.scss
@@ -149,7 +149,7 @@ $font-smaller: 0.9rem;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: $spacing-m;
+    gap: $spacing-s;
     width: 100%;
   }
 
